# nyuwayskillscanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: PEER_COMPARISON.md  README.md  expected.json  run_peer_benchmark.py
benchmarks/corpus/benign_suspicious/dependency-installer/: SKILL.md
benchmarks/corpus/benign_suspicious/remote-doc-loader/: SKILL.md
benchmarks/corpus/benign_suspicious/typosquat-requirements/: SKILL.md  requirements.txt
benchmarks/corpus/benign_suspicious/workspace-indexer/: SKILL.md
benchmarks/corpus/clean/code-review-helper/: SKILL.md
benchmarks/corpus/clean/data-table-formatter/: SKILL.md
benchmarks/corpus/clean/note-summarizer/: SKILL.md
benchmarks/corpus/clean/safe-api-doc-writer/: SKILL.md
benchmarks/corpus/malicious/credential-forwarder/: SKILL.md
docs/: CI_INTEGRATION.md  EXAMPLES.md  MARKETPLACE_DECISIONS.md  POLICY_PACKS.md  RELEASE_CHECKLIST.md
docs/ci/: github-action-skill-scan.yml
nyuway_scan_core/: __init__.py  findings.py  policy.py  scoring.py  secrets.py  supply_chain.py  virustotal.py
nyuwayskillscanner/: __init__.py  discovery.py  sources.py
nyuwayskillscanner/cli/: main.py
nyuwayskillscanner/output/: json_report.py  markdown_report.py  sarif_report.py  terminal.py
nyuwayskillscanner/parsers/: __init__.py  bundle.py
nyuwayskillscanner/scanners/: __init__.py  code_static.py  injection.py  llm_safety.py
tests/: conftest.py  test_benchmark_corpus.py  test_benchmark_runner.py  test_bundle.py  test_cli.py  test_feature_matrix_cli.py  test_feature_matrix_core.py  test_feature_matrix_scanners.py  test_injection.py  test_llm_merge.py  test_rule_catalogue.py  test_sources.py
(+19 files in other folders)
